--- a/src/main/resources/assets/gui/mainGui.fxml
+++ b/src/main/resources/assets/gui/mainGui.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@css/main.css"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="600" maxWidth="800" minHeight="600"
+            minWidth="800" prefHeight="600.0" prefWidth="800.0" stylesheets="@css/main.css"
             xmlns="http://javafx.com/javafx/8">
     <children>
         <Label layoutX="328.0" layoutY="14.0" text="Путь до картинки"/>
