Добавлен и настроен обработчик главного окна, настроены таблица атрибутов и поля - Теперь в них можно ввести только определенные значения, которые априори будут верны.

--- a/src/main/resources/assets/gui/css/main.css
+++ b/src/main/resources/assets/gui/css/main.css
@@ -1,4 +1,9 @@
 .root * {
+    -fx-font-family: System;
     -fx-font-size: 18;
+}
+
+#tableAttributes .table-column, #tableAttributes .table-column .text-field {
+    -fx-alignment: CENTER;
 }
 
