--- a/src/main/resources/assets/gui/msgGui.fxml
+++ b/src/main/resources/assets/gui/msgGui.fxml
@@ -5,13 +5,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="176.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="enframer.display.controller.MsgGui">
-    <Button fx:id="buttonOk" layoutX="161.0" layoutY="150.0" mnemonicParsing="false" text="OK"/>
-    <Label layoutX="133.0" layoutY="14.0" text="Сообщение">
-        <font>
-            <Font name="Calibri" size="18.0"/>
-        </font>
-    </Label>
-    <Label fx:id="msgLabel" layoutX="18.0" layoutY="35.0" prefHeight="107.0" prefWidth="319.0"/>
+            minWidth="-Infinity"
+            prefHeight="176.0" prefWidth="354.0"
+            xmlns="http://javafx.com/javafx/8" fx:controller="enframer.display.controller.MsgGui">
+    <children>
+        <Button fx:id="buttonOk" layoutX="161.0" layoutY="150.0" mnemonicParsing="false" text="OK"/>
+        <Label layoutX="133.0" layoutY="14.0" text="Сообщение">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label fx:id="msgLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="18.0" layoutY="35.0"
+               prefHeight="107.0" prefWidth="319.0" textAlignment="CENTER" wrapText="true">
+            <font>
+                <Font size="14.0"/>
+            </font>
+        </Label>
+    </children>
 </AnchorPane>
